2015-01-16  Jeroen T. Vermeulen <jtv@xs4all.nl>
 tools/extract-version:
 - Replace obsolete sed -E option.  Fixes #265.
2015-01-16  Jeroen T. Vermeulen <jtv@xs4all.nl>
 tools/splitconfig, tools/template2mak.py:
 - Use /usr/bin/python instead of /usr/bin/python.  Closees #280.
2015-01-16  Jeroen T. Vermeulen <jtv@xs4all.nl>
 include/pqxx/notification.hxx:
 - Remove spurious second inclusion of compiler-internal-pre.hxx.
 - Fixes #283.  Thanks Jeroen Walter.
2015-01-16  Jeroen T. Vermeulen <jtv@xs4all.nl>
 win32/common-sample:
 - Document different libpq path when using MinGW.
 - Fixes #289.  Thanks ajonen.
2015-01-16  Jeroen T. Vermeulen <jtv@xs4all.nl>
 include/pqxx/util.hxx:
 - Fix check for TR1 headers.
 - Fixes #305.  Thanks Steve in Blighty.
2015-01-16  Jeroen T. Vermeulen <jtv@xs4all.nl>
 src/largeobject.cxx:
 - Include <algorithm> so that min()/max() work.
2015-01-03  Jeroen T. Vermeulen <jtv@xs4all.nl>
 include/pxx/compiler-public.hxx:
 - Always quote #error message; fixes C++11 compile error.
2014-03-23  Jeroen T. Vermeulen <jtv@xs4all.nl>
 configure.ac.in:
 - Always accept "long long": the postgres header now requires it.
2014-03-15  Jeroen T. Vermeulen <jtv@xs4all.nl>
 src/connection_base.cxx:
 - Conditionally comment out Conditionally unused variable.
2013-01-17  Jeroen T. Vermeulen <jtv@xs4all.nl>
 tools/splitconfig:
 - Rewrote in python.
 - Much shorter: most of the code was detecting & handling grep flavours!
 - Should fix BSD build problem.  Thanks Martin van den Nieuwelaar.
2013-01-17  Jeroen T. Vermeulen <jtv@xs4all.nl>
 include/pqxx/binarystring.hxx, src/binarystring.cxx:
 - C++11 fix: instantiate on non-const unsigned char.  Thanks Linus Kallberg.
2013-01-12  Jeroen T. Vermeulen <jtv@xs4all.nl>
 include/pqxx/isolation.hxx:
 - Updated documentation for isolation levels.
2013-01-12  Jeroen T. Vermeulen <jtv@xs4all.nl>
 include/pqxx/isolation.hxx:
 - Support for REPEATABLE READ isolation level.  Thanks pawsa.
 - Fixes #259.